--- a/styles/style.css
+++ b/styles/style.css
@@ -2,3 +2,19 @@
   font-family: "Hind Madurai", sans-serif;
   font-style: normal;
 }
+
+.inter-secondary {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.roboto {
+  font-family: "Roboto", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
